tests/cases/errors/invalid-syntax/invalid-identifier/input.sym
{ :user-name! Alice
, :age 28
}
